--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="homeCSS.css" />
+
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="agents.html">Agents</a></li>
+        <li><a href="buysell.html">Buy/Sell</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
