contact page added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="homeCSS.css" />
+    <title>Welcome To California First Realty</title>
+    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
 
 </head>
 <body>
