--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact Us</title>
+    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+    <link rel="stylesheet" type="text/css" href="css/contactCSS.css" />
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="agents.html">Agents</a></li>
+        <li><a href="buysell.html">Buy/Sell</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
 
+<h1>Contact Us</h1>
+<form action="#" method="POST">
+    <label for="fname">First Name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="lname">Last Name:</label><br>
+    <input type="text" id="lname" name="lname"><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email"><br>
+    <label for="phone">Phone:</label><br>
+    <input type="tel" id="phone" name="phone"><br>
+    <label for="message">Message:</label><br>
+    <textarea id="message" name="message"></textarea><br>
+    <input type="submit" value="Submit">
+</form>
 </body>
 </html>
