--- a/home.html
+++ b/home.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="agents.html">Agents</a></li>
+        <li><a href="buysell.html">Buy/Sell</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
 
 </body>
 </html>
