--- a/buysell.html
+++ b/buysell.html
@@ -16,7 +16,7 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
-
+<h1> test</h1>
 
 <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -24,19 +24,19 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="photos/pexels-binyamin-mellish-1396122.jpg" style="width:100%">
+        <img src="photos/pexels-binyamin-mellish-1396122.jpg" style="width:100%" alt="house">
         <div class="text">Caption Text</div>
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="photos/1899412.jpg" style="width:100%">
+        <img src="photos/1899412.jpg" style="width:100%" alt="home">
         <div class="text">Caption Two</div>
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="photos/aerialViewofCity.png" style="width:100%">
+        <img src="photos/aerialViewofCity.png" style="width:100%" alt="house">
         <div class="text">Caption Three</div>
     </div>
 
