home page background

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,14 @@
     <title>Contact Us</title>
     <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
     <link rel="stylesheet" type="text/css" href="css/contactCSS.css" />
+    <style> body {
+        background-image: url("photos/phone.jpg");
+        background-size: cover;
+    }
+    </style>
 </head>
 <body>
+
 <nav>
     <ul>
         <li><a href="home.html">Home</a></li>
@@ -16,6 +22,7 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
+
 
 <h1>Contact Us</h1>
 <form action="#" method="POST">
