--- a/home.html
+++ b/home.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+    <style> body {
+        background-image: url("photos/aerialViewofCity.png");
+        background-size: cover;
+    }
+    </style>
 </head>
 <body>
 <nav>
@@ -15,6 +20,35 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
+<footer>
+    <div class="row">
+        <div class="column">
+            <h3>Column 1</h3>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <h3>Column 2</h3>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <h3>Column 3</h3>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+
 
 </body>
 </html>
