--- a/agents.html
+++ b/agents.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Our Agents</title>
     <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+    <style>
+        body{
+            background-image: url("photos/emily.png");
+            background-size: auto;
+        }
+    </style>
 </head>
 <body>
 <nav>
