--- a/agents.html
+++ b/agents.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Our Agents</title>
-    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <style>
-        body{
-            background-image: url("photos/emily.png");
-            background-size: auto;
+        body {
+            background-color: beige;
         }
     </style>
 </head>
 <body>
 <nav>
+    <a href="/" class="logo">
+        <img src="photos/CFRLogo1.png" alt="Logo">
+    </a>
     <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="agents.html">Agents</a></li>
