--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About Us</title>
-    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 <nav>
