--- a/buysell.html
+++ b/buysell.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Buy/Sell</title>
-    <link rel="stylesheet" type="text/css" href="css/buysellCSS.css" />
-    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+<!--    <link rel="stylesheet" type="text/css" href="css/buysellCSS.css" />-->
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 <nav>
@@ -17,41 +17,5 @@
     </ul>
 </nav>
 <h1> test</h1>
-
-<!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="photos/pexels-binyamin-mellish-1396122.jpg" style="width:100%" alt="house">
-        <div class="text">Caption Text</div>
-    </div>
-
-    <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="photos/1899412.jpg" style="width:100%" alt="home">
-        <div class="text">Caption Two</div>
-    </div>
-
-    <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="photos/aerialViewofCity.png" style="width:100%" alt="house">
-        <div class="text">Caption Three</div>
-    </div>
-
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-
 </body>
 </html>
