--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
-    <link rel="stylesheet" type="text/css" href="css/contactCSS.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+<!--    <link rel="stylesheet" type="text/css" href="css/contactCSS.css" />-->
     <style> body {
         background-image: url("photos/phone.jpg");
         background-size: cover;
