--- a/home.html
+++ b/home.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="css/homeCSS.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <style> body {
         background-image: url("photos/aerialViewofCity.png");
         background-size: cover;
     }
     </style>
+
 </head>
 <body>
 <nav>
@@ -20,30 +21,54 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
+<header>
+    <p>
+        Welcome to California First Realty, your trusted partner for all your real estate needs in California.
+        Our firm has been serving the California community for several years, providing exceptional real estate services
+        to buyers and sellers alike. Our team of experienced and knowledgeable real estate professionals has a deep understanding
+        of the California real estate market, enabling us to offer you expert guidance and support throughout your real estate journey.
+
+        At California First Realty, we are committed to providing our clients with personalized attention and excellent
+        customer service. We understand that buying or selling a property can be a complex and overwhelming process, which is why we
+        make it our priority to ensure that you feel comfortable and confident every step of the way. Our team is dedicated to helping
+        you achieve your real estate goals, whether you are a first-time homebuyer or a seasoned investor.
+
+        Our comprehensive services cover all aspects of the real estate industry, including residential and commercial sales, property
+        management, and real estate investments. Our team has a wealth of experience in these areas, and we are passionate about helping our
+        clients make informed decisions that are in their best interests.
+
+        As a leading California real estate firm, we are proud to offer our clients access to the latest technology and innovative tools,
+        allowing us to provide the highest level of service possible. Our commitment to excellence and integrity has earned us a reputation
+        as a trusted and reliable partner in the California real estate industry.
+
+        Whether you are buying or selling a property in California, our team at California First Realty is here to help. Contact us today
+        to schedule a consultation and let us help you achieve your real estate goals.
+    </p>
+</header>
+
 <footer>
+
     <div class="row">
         <div class="column">
-            <h3>Column 1</h3>
+            <img src="photos/CFRLogo1.png">
+
+        </div>
+        <div class="column">
+            <h3> </h3>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li>525 W Holt Blvd</li>
+                <li>Ontario, CA 91761</li>
+                <li>(909)988-6888</li>
+                <li>cfr@calfirstrealty.net</li>
             </ul>
         </div>
         <div class="column">
-            <h3>Column 2</h3>
+            <h3></h3>
             <ul>
-                <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h3>Column 3</h3>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li>&copy; California First Realty</li>
+
             </ul>
         </div>
     </div>
