--- a/agents.html
+++ b/agents.html
@@ -4,25 +4,119 @@
     <meta charset="UTF-8">
     <title>Our Agents</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/agents.css" />
+    <link rel="stylesheet" type="text/css" href="css/navBar.css" />
+    <link rel="stylesheet" type="text/css" href="css/footer.css" />
     <style>
         body {
-            background-color: beige;
+            background-image: url("photos/aerialView3.jpg");
+            background-size: cover;
+        }
+        .element-heading{
+            align-content: center;
         }
     </style>
 </head>
+<div class="navbar">
+    <nav>
+        <a href="home.html" class="logo">
+            <img src="photos/CFRLogoFull.png" alt="Logo">
+        </a>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="agents.html">Agents</a></li>
+
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Buy/Sell</a>
+                <div class="dropdown-content">
+                    <a href="buy.html">Buy</a>
+                    <a href="sell.html">Sell</a>
+                </div>
+            </li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</div>
+</head>
 <body>
-<nav>
-    <a href="/" class="logo">
-        <img src="photos/CFRLogo1.png" alt="Logo">
-    </a>
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="agents.html">Agents</a></li>
-        <li><a href="buysell.html">Buy/Sell</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+<h1>Meet our Agents</h1>
+<div class="grid-container">
+    <div class="grid-item">
+        <img src="photos/sampleHeadshot3.png" alt="agent 1">
+        <p>Sarah Johnson, Agent<br><br>
+            With over a decade of experience in the real estate industry,
+            Sarah is a seasoned agent who knows the ins and outs of the market.
+            Her passion for helping people find their dream home is unmatched,
+            and she always goes the extra mile to ensure her clients are satisfied
+            . Whether you're a first-time buyer or a seasoned investor, Sarah
+            is the perfect partner to help you navigate the complex world of
+            real estate.
+        </p>
+    </div>
+    <div class="grid-item">
+        <img src="photos/sample%20headshot%201.png" alt="agent 2">
+        <p>Jackie Smith, Agent<br><br>
+        Jackie is a dedicated and hardworking real estate agent with a wealth of
+            knowledge about the local market. She's been in the business for over
+            five years, and during that time she's earned a reputation for her
+            honesty, integrity, and commitment to his clients. Jackie understands
+            that buying or selling a home can be a stressful and emotional process,
+            and she works tirelessly to ensure that her clients feel supported every
+            step of the way.</p>
+    </div>
+    <div class="grid-item">
+        <img src="photos/sampleHeadshot2.png" alt="agent 3">
+        <p>Laura Lee, Agent <br><br>
+            Laura is a dynamic and creative real estate agent with a knack
+            for finding the perfect properties for her clients. With over
+            eight years of experience in the industry, Laura knows how to
+            navigate even the most complex real estate transactions. Her
+            attention to detail, excellent communication skills, and commitment
+            to her clients make her an invaluable asset to anyone looking to
+            buy or sell a home.</p>
+    </div>
+    <div class="grid-item">
+        <img src="photos/mbHeadshot.png" alt="agent 4">
+        <p>Michael Brown, Agent <br><br>
+            Michael is a results-driven real estate agent who knows how to
+            get things done. He's been in the industry for over 15 years,
+            and during that time he's built a reputation for his professionalism,
+            expertise, and exceptional negotiation skills. Michael understands
+            that every client is unique, and he works tirelessly to tailor his
+            approach to meet their individual needs and goals. If you're
+            looking for a real estate agent who will stop at nothing to get
+            you the results you want, Michael is the perfect choice.</p>
+    </div>
+</div>
 
 </body>
+
+<footer>
+    <div class="row">
+        <div class="column">
+            <img src="photos/CFRLogoFull.png">
+
+        </div>
+        <div class="column">
+            <h3> </h3>
+            <ul>
+                <li>525 W Holt Blvd</li>
+                <li>Ontario, CA 91761</li>
+                <li>(909)988-6888</li>
+                <li>cfr@calfirstrealty.net</li>
+            </ul>
+        </div>
+        <div class="column">
+            <h3></h3>
+            <ul>
+                <li><a href="https://www.facebook.com/calfirstrealty/">Follow us on facebook</a></li>
+                <img src="photos/EHOlogo.png" width="100" height="100">
+                <li><a href="#">Link 3</a></li>
+                <li>&copy; California First Realty</li>
+
+            </ul>
+        </div>
+    </div>
+</footer>
 </html>
