--- a/buysell.html
+++ b/buysell.html
@@ -5,17 +5,30 @@
     <title>Buy/Sell</title>
 <!--    <link rel="stylesheet" type="text/css" href="css/buysellCSS.css" />-->
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/navBar.css" />
+
+    <style>
+        body {
+            background-image: url("photos/aerialView3.jpg");
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
+<div class="navbar">
 <nav>
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="agents.html">Agents</a></li>
-        <li><a href="buysell.html">Buy/Sell</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <a href="/" class="logo">
+        <img src="photos/CFRLogoFull.png" alt="Logo">
+    </a>    <ul>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="agents.html">Agents</a></li>
+    <li><a href="buysell.html">Buy/Sell</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
 </nav>
+</div>
+
 <h1> test</h1>
 </body>
 </html>
