--- a/buy.html
+++ b/buy.html
@@ -2,43 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome To California First Realty</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="css/navBar.css" />
     <link rel="stylesheet" type="text/css" href="css/footer.css" />
-    <style>
-        body {
-            background-image: url("photos/aerialView3.jpg");
-            background-size: cover;
-        }
-    </style>
 
-</head>
-<body>
-<div class="navbar">
-    <nav>
-        <a href="/" class="logo">
-            <img src="photos/CFRLogoFull.png" alt="Logo">
-        </a>    <ul>
+
+<nav>
+    <a href="home.html" class="logo">
+        <img src="photos/CFRLogoFull.png" alt="Logo">
+    </a>
+    <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="agents.html">Agents</a></li>
-        <li><a href="buysell.html">Buy/Sell</a></li>
+
+        <li class="dropdown">
+            <a href="#" class="dropbtn">Buy/Sell</a>
+            <div class="dropdown-content">
+                <a href="buy.html">Buy</a>
+                <a href="sell.html">Sell</a>
+            </div>
+        </li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
-    </nav>
-</div>
+</nav>
+<body>
 
-
-
-
+</body>
 <footer>
-
     <div class="row">
-        <div class="column">
+        <div class="right-column">
             <img src="photos/CFRLogoFull.png">
 
         </div>
-        <div class="column">
+        <div class="middle-column">
             <h3> </h3>
             <ul>
                 <li>525 W Holt Blvd</li>
@@ -47,18 +44,16 @@
                 <li>cfr@calfirstrealty.net</li>
             </ul>
         </div>
-        <div class="column">
+        <div class="left-column">
             <h3></h3>
             <ul>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li><a href="https://www.facebook.com/calfirstrealty/">Follow us on facebook</a></li>
+                <img src="photos/EHOlogo.png" width="100" height="100">
+                <!--                <li><a href="#">Link 3</a></li>-->
                 <li>&copy; California First Realty</li>
 
             </ul>
         </div>
     </div>
 </footer>
-
-
-</body>
 </html>
