--- a/navBar.html
+++ b/navBar.html
@@ -5,12 +5,21 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
 <nav>
+    <a href="home.html" class="logo">
+        <img src="photos/CFRLogoFull.png" alt="Logo">
+    </a>
     <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="agents.html">Agents</a></li>
-        <li><a href="buysell.html">Buy/Sell</a></li>
+
+        <li class="dropdown">
+            <a href="#" class="dropbtn">Buy/Sell</a>
+            <div class="dropdown-content">
+                <a href="buy.html">Buy</a>
+                <a href="sell.html">Sell</a>
+            </div>
+        </li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
