--- a/agents.html
+++ b/agents.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css" />
     <style>
         body {
-            background-image: url("photos/aerialView3.jpg");
+            background-image: url("photos/whiteBackground.jpg");
             background-size: cover;
         }
         .element-heading{
