--- a/buy.html
+++ b/buy.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Buy a Home</title>
     <link rel="stylesheet" type="text/css" href="css/navBar.css" />
     <link rel="stylesheet" type="text/css" href="css/footer.css" />
-
-
+    <link rel="stylesheet" type="text/css" href="css/buy.css" />
+    <style>
+        body {
+            background-image: url("photos/whiteBackground.jpg");
+            background-size: cover;
+            /*background-blend-mode: darken;*/
+            /*background-color:lightgray;*/
+        }
+    </style>
+<!--    <script src="buy.js"></script>-->
+</head>
 <nav>
     <a href="home.html" class="logo">
         <img src="photos/CFRLogoFull.png" alt="Logo">
@@ -27,6 +36,23 @@
     </ul>
 </nav>
 <body>
+<div class="heading">
+<h1>Ready to buy?</h1>
+<h2>Check out some newly listed property in the area!</h2>
+</div>
+<div class="carousel">
+    <div class="slides">
+    <img class="slide" src="photos/zillow1.png">
+    <img class="slide" src="photos/zillow2.png">
+    <img class="slide" src="photos/zillow3.png">
+    <img class="slide" src="photos/zillow4.png">
+    <img class="slide" src="photos/zillow5.png">
+    <img class="slide" src="photos/zillow6.png">
+    </div>
+<button class="prev">&#10094;</button>
+<button class="next">&#10095;</button>
+</div>
+<script src="buy.js"></script>
 
 </body>
 <footer>
