--- a/home.html
+++ b/home.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+<!--    <link rel="stylesheet" type="text/css" href="css/main.css" />-->
     <link rel="stylesheet" type="text/css" href="css/home.css" />
     <link rel="stylesheet" type="text/css" href="css/navBar.css" />
     <link rel="stylesheet" type="text/css" href="css/footer.css" />
     <style>
         body {
-            background-image: url("photos/aerialView3.jpg");
+            background-image: url("photos/whiteBackground.jpg");
             background-size: cover;
-            background-blend-mode: darken;
+            /*background-blend-mode: darken;*/
+            /*background-color:lightgray;*/
     }
     </style>
 
@@ -40,27 +41,48 @@
 </div>
 
 <body>
-<div class="headings">
-<h1>Finding Your Dream Home Starts Here</h1>
-<!--<h2>Search with Confidence Knowing Your Local Agent has the Latest Listings</h2>-->
+<div class="container">
+    <div class="image">
+        <img src="photos/handingKeys.jpg" alt="keys" height="400">
+    </div>
+    <div class="text">
+        <h1><strong>Finding Your Dream Home Starts Here</strong></h1>
+        <p>
+            First Time Buyers
+            <br>
+            Residential Sales
+            <br>
+            Multi-Family Sales
+            <br>
+            Commercial Sales
+            <br>
+            Vacant Land
+            <br>
+            Investments
+        </p>
+    </div>
+</div>
+<h2>Testimonials</h2>
+<div class="testimonial-grid">
+    <div class="testimonial">
+        <p>"I had a great experience working with California First Realty. Their agents were professional and knowledgeable, and helped me find the perfect home for my family. Highly recommend!"</p>
+        <p class="testimonial-author">- John Doe, Home Buyer</p>
+    </div>
+    <div class="testimonial">
+        <p>"As a first-time seller, I was nervous about the process. But the team at California First Realty made it easy and stress-free. They helped me navigate each step and got me a great offer for my home. Thank you!"</p>
+        <p class="testimonial-author">- Jane Smith, Home Seller</p>
+    </div>
+    <div class="testimonial">
+        <p>"I was interested in investing in real estate, but wasn't sure where to start. The agents at California First Realty provided expert guidance and helped me find the right property to invest in. It's been a great investment so far!"</p>
+        <p class="testimonial-author">- Bob Johnson, Real Estate Investor</p>
+    </div>
 </div>
 
-<div class="element-button">
-    <p>
-        "First Time Buyers"
-        <br>
-        "Residential Sales"
-        <br>
-        "Multi-Family Sales"
-        <br>
-        "Commercial Sales"
-        <br>
-        "Vacant Land"
-        <br>
-        "Investments"
-    </p>
 </div>
+</div>
+
 </body>
+
 
 
 
