--- a/sell.html
+++ b/sell.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sell your home</title>
     <link rel="stylesheet" type="text/css" href="css/navBar.css" />
     <link rel="stylesheet" type="text/css" href="css/footer.css" />
     <link rel="stylesheet" type="text/css" href="css/sell.css" />
+    <style>
+        body {
+            background-image: url("photos/whiteBackground.jpg");
+            background-size: cover;
+            /*background-blend-mode: darken;*/
+            /*background-color:lightgray;*/
+        }
+    </style>
 </head>
 
 <nav>
@@ -34,7 +42,7 @@
 </div>
 <div class="howTo">
     <ol>
-        <li><a href="#find-realtor">Find and choose one of our licensed Realtors</a></li>
+        <li><a href="#find-realtor">Find and choose one of our licensed Agents</a></li>
         <li><a href="#listing-agreement">Sign a listing agreement</a></li>
         <li><a href="#price-home">Determine a list price</a> </li>
         <li><a href="#prepare-home">Prepare to list your house</a> </li>
