--- a/buy.html
+++ b/buy.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/buy.css" />
     <style>
         body {
-            background-image: url("photos/whiteBackground.jpg");
+            /*background-image: url("photos/whiteBackground.jpg");*/
+            background-image: url("photos/aerialViewSunset2.png");
             background-size: cover;
+
             /*background-blend-mode: darken;*/
             /*background-color:lightgray;*/
         }
