--- a/sell.html
+++ b/sell.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:margin-left="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Sell your home</title>
@@ -36,11 +36,13 @@
     </ul>
 </nav>
 <body>
-<div class="container">
-    <img src="photos/homeLandscape.png" alt="landscpape with a house">
-    <div class="center"> <h1>Looking to sell your home?</h1></div>
-</div>
+<!--<div class="container">-->
+<!--    <img src="photos/homeLandscape.png" alt="landscpape with a house">-->
+<!--    <div class="center"> </div>-->
+        <h1>Looking to sell your home?</h1>
+<!--</div>-->
 <div class="howTo">
+    <img src="photos/sold.jpg" alt="sold" style='float: right' margin-left: 10px width="500">
     <ol>
         <li><a href="#find-realtor">Find and choose one of our licensed Agents</a></li>
         <li><a href="#listing-agreement">Sign a listing agreement</a></li>
@@ -51,13 +53,11 @@
         <li><a href="#inspections">Conduct inspections</a></li>
         <li><a href="close">Close on your sale</a> </li>
     </ol>
+
     <h3 id="find-realtor">
         1. Find and choose one of our licenced Agents
     </h3>
-    <p>We recommend finding at least 2-3 local seller agents to compare and choose from before signing a listing agreement.
-        Comparing multiple options helps you find the best fit for your situation and could save you thousands on realtor commissions.
-
-        There are many ways to find a realtor in California. To save the most time and money, stick to sources that make
+    <p>There are many ways to find a realtor in California. To save the most time and money, stick to sources that make
         it easy to find quality options.
     </p>
     <h3 id="listing-agreement">2. Sign a California listing agreement and seller disclosures</h3>
@@ -107,15 +107,14 @@
                 <li>Key information about your home and its comparables, including square footage, bedrooms and bathrooms, and the age of each home.</li>
                 <li>The agent’s recommended list price.&nbsp;</li>
             </ul>
-        </div></div>
+        </div>
 
-</body>
+<!--</body>-->
 
 <footer>
     <div class="row">
         <div class="right-column">
             <img src="photos/CFRLogoFull.png">
-
         </div>
         <div class="middle-column">
             <h3> </h3>
@@ -133,7 +132,6 @@
                 <img src="photos/EHOlogo.png" width="100" height="100">
                 <!--                <li><a href="#">Link 3</a></li>-->
                 <li>&copy; California First Realty</li>
-
             </ul>
         </div>
     </div>
