--- a/home.html
+++ b/home.html
@@ -10,7 +10,9 @@
     <style>
         body {
             background-image: url("photos/whiteBackground.jpg");
+            /*background-image: url("photos/aerialView3.jpg");*/
             background-size: cover;
+
             /*background-blend-mode: darken;*/
             /*background-color:lightgray;*/
     }
@@ -42,9 +44,6 @@
 
 <body>
 <div class="container">
-    <div class="image">
-        <img src="photos/handingKeys.jpg" alt="keys" height="400">
-    </div>
     <div class="text">
         <h1><strong>Finding Your Dream Home Starts Here</strong></h1>
         <p>
@@ -61,7 +60,11 @@
             Investments
         </p>
     </div>
+    <div class="image">
+        <img src="photos/aerialView3.jpg" alt="keys" width="100%" height="500">
+    </div>
 </div>
+
 <h2>Testimonials</h2>
 <div class="testimonial-grid">
     <div class="testimonial">
