update file locations

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
 
 <div class="contactUs">
 <h1>Contact Us</h1>
+    <h2>Call us at (909)988-6888 </h2>
+    <h2>or fill out the form below </h2>
 <form action="#" method="POST">
     <label for="fname">First Name:</label><br>
     <input type="text" id="fname" name="fname"><br>
