update file locations

--- a/sell.html
+++ b/sell.html
@@ -40,6 +40,7 @@
 <!--</div>-->
 <div class="howTo">
     <img src="photos/sold.jpg" alt="sold" style='float: right' margin-left: 10px width="500">
+    <h2>Steps to selling your home</h2>
     <ol>
         <li><a href="#find-realtor">Find and choose one of our licensed Agents</a></li>
         <li><a href="#listing-agreement">Sign a listing agreement</a></li>
